--- a/renhongl-blog/themes/cyanstyle2/layout/_widget/music.ejs
+++ b/renhongl-blog/themes/cyanstyle2/layout/_widget/music.ejs
@@ -2,12 +2,12 @@
   <aside class="widget">
     <h3 class="widget-title">Music</h3>
     <div class="widget-content">
-      <!-- <audio src="<%= theme.music %>" controls="controls"
-             style="width:100%" autoplay loop>
+      <audio src="<%= theme.music %>" controls="controls"
+             style="width:100%" loop>
         您的浏览器不支持 audio 标签。
-      </audio> -->
+      </audio>
 
-      <object type="application/x-shockwave-flash" id="ximalaya_player" data="https://www.ximalaya.com/swf/sound/purple.swf?id=28469273&auto=true" width="206" height="36"></object>
+      <!-- <object type="application/x-shockwave-flash" id="ximalaya_player" data="http://other.web.rc01.sycdn.kuwo.cn/resource/n3/99/21/1172239707.mp3?auto=true" width="190" height="36"></object> -->
     </div>
   </aside>
 <% } %>
